# vnb-atlas

./: .gitignore  Makefile  README.md
backend/: README.md  pyproject.toml
backend/app/: __init__.py  domain.py  main.py  models.py  schemas.py
backend/app/data/: areas.geojson  federal-states.json  operators.json
backend/app/routers/: areas.py  coverage.py  federal_states.py  health.py  lookup.py  operators.py  search.py
backend/app/services/: coverage_service.py  data_service.py  geo_service.py
backend/app/tests/: test_areas.py  test_coverage.py  test_health.py  test_lookup.py  test_operators.py  test_search.py
frontend/: index.html  map.html  package-lock.json  package.json  vite.config.ts
frontend/src/: api-client.ts  geojson-utils.ts  map-colors.ts  map-page.ts  map.ts  search.ts  types.ts  ui.ts
frontend/styles/: footer.css  header.css  hero.css  main.css  map.css
scripts/: dev.bat  dev.ps1  dev.sh  import_gis_placeholder.py
seminar/: README.md  code-examples.md  learning-material.md  live-demo-plan.md  package-lock.json  package.json  project-reference.md  slides-content.md  speaker-notes.md  talk-plan.md
seminar/examples/: areas_hochspannung_nw.json  health.json  lookup_bochum.json  openapi.json  openapi_summary.json  operators_westnetz.json  search_westnetz.json
seminar/materials/: code-examples.md  demo-ablauf.md  lernmaterial.md  sprecher-skript.md  (+1 more)
vnbdigital/: TODO.md  __init__.py  analyze_mesh.py  bbox_presets.py  build_nrw_mesh.py  build_tile_mesh.py  export_backend_polygons.py  requirements.txt  simple_client.py
(+2 files in other folders)
