[project]
name = "vnb-atlas-backend"
version = "0.1.0"
description = "FastAPI backend for the Deutschland VNB Atlas"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "pydantic>=2.10,<3.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
pythonpath = ["."]
